--- a/web/css/bradley_hand.css
+++ b/web/css/bradley_hand.css
@@ -4,11 +4,11 @@
 @font-face{
   font-family: 'bradley_hand_Bold';
   
-    src:url('../font/bradley_hand_Bold.eot') format('embedded-opentype');
-    src:url('../font/bradley_hand_Bold.eot?#iefix') format('embedded-opentype');
-    src:url('../font/bradley_hand_Bold.woff') format('woff');
-    src:local(※), url('../font/bradley_hand_Bold.woff') format('woff');
-    src: local('☺'), url('../font/bradley_hand_Bold.woff') format('woff');
+    src:url('../font/bradley_hand_bold.eot') format('embedded-opentype');
+    src:url('../font/bradley_hand_bold.eot?#iefix') format('embedded-opentype');
+    src:url('../font/bradley_hand_bold.woff') format('woff');
+    src:local(※), url('../font/bradley_hand_bold.woff') format('woff');
+    src: local('☺'), url('../font/bradley_hand_bold.woff') format('woff');
 }
 
 
