--- a/web/css/media.css
+++ b/web/css/media.css
@@ -33,7 +33,7 @@
 
 .header { padding:7px 0 7px 30px; }
 .header img { width:30px;}
-.header a.css_bar { margin-top:10px; }
+.header a.open_menu_bar { margin-top:10px; }
 #Simlider li span { font-size:15px;}
 .footer_area { padding:37px 70px 37px 70px; }
 .footer_title { width:100%; text-align:center; margin-bottom:20px; padding-top:0; }
