--- a/web/css/media.css
+++ b/web/css/media.css
@@ -36,7 +36,8 @@
 .header a.open_menu_bar { margin-top:10px; }
 .visual_txt span { width:70%; margin:0 auto; font-size:40px;}
 .visual_txt span.sub_tit { width:100%; font-size:16px; }
-#Simlider li span { font-size:15px;}
+.portfolio h2 { font-size:35px; }
+
 .footer_area { padding:37px 70px 37px 70px; }
 .footer_title { width:100%; text-align:center; margin-bottom:20px; padding-top:0; }
 .footer_title img { width:50%; min-width:180px; }
