--- a/web/css/media.css
+++ b/web/css/media.css
@@ -32,7 +32,7 @@
 
 }
 
-@media all and (min-width:617px) and (max-width:816px) and (orientation : portrait) {
+@media all and (min-width:617px) and (max-width:816px) and (orientation : landscape) {
 
 .header { padding:15px 0 15px 53px; }
 .header a.open_menu_bar { margin-top:5px; }
