--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -32,7 +32,7 @@ a { text-decoration:none; color:#000; }
 
 
 
-.container { width:100%; color:#595959; }
+.container { width:100%; background:#f1eded; }
 
 
 /* footer */
