--- a/web/css/main.css
+++ b/web/css/main.css
@@ -69,7 +69,7 @@
 
 .bg { z-index: 50; position: absolute; top: 0; left: -100%; width: 100%; height: 100%; background:#393939;}
 .bg a { display:block; width:100%; height:100%; }
-
+.bg a p { color:#fff; }
 
 
 
