--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -5,19 +5,7 @@
 html, body { min-width:320px; font-family: 'bradley_hand_Bold','돋움', '굴림', 'Dotum', 'Gulim', 'sans-serif'; -webkit-text-size-adjust:none;}
 a { text-decoration:none; color:#000; }
 
-.view_loading {
-        display:none;
-        position:fixed;
-        left:0;
-        top:0;
-        z-index:200;
-        width:100%; height:100%;
-        text-align: center;
-        padding-top: 70px;
-        background: #FFFFF0;
-        filter: alpha(opacity=60);
-        opacity: 0.6;
-}
+.view_loading { display:none; position:fixed; left:0; top:0; z-index:200; width:100%; height:100%; text-align:center; padding-top:70px; background: #FFFFF0; filter: alpha(opacity=60); opacity: 0.6; }
 
 .header {  width:100%; position:fixed; padding:28px 0 27px 53px; z-index:100; border-bottom:1px solid #a0a1a2; box-sizing:border-box; -webkit-box-sizing:border-box; }
 .header h1 { float:left; }
