--- a/web/css/media.css
+++ b/web/css/media.css
@@ -19,10 +19,9 @@
 
 }
 
-@media all and (min-width:577px) and (max-width:816px) {
+@media all and (min-width:577px) and (max-width:816px), print and (orientation : portrait) {
 
 .header { padding:15px 0 15px 53px; }
-.header a.open_menu_bar { margin-top:5px; }
 .visual_txt span { width:70%; margin:0 auto; font-size:40px;}
 .visual_txt span.sub_tit { width:100%; font-size:16px; }
 .portfolio h2 { font-size:40px; }
