--- a/web/css/media.css
+++ b/web/css/media.css
@@ -19,7 +19,7 @@
 
 }
 
-@media all and (min-width:577px) and (max-width:816px), print and (orientation : portrait) {
+@media all and (min-width:577px) and (max-width:816px) and (orientation : portrait) {
 
 .header { padding:15px 0 15px 53px; }
 .visual_txt span { width:70%; margin:0 auto; font-size:40px;}
@@ -33,21 +33,9 @@
 .footer_address p span { display:block; width:100%; }
 
 }
-
-@media all and (min-width:577px) and (max-width:816px) and (orientation : landscape) {
+@media all and (min-width:5px) and (max-width:665px) and (orientation : landscape) {
 
 .header { padding:7px 0 7px 30px; }
-.header img { width:30px;}
-.header a.open_menu_bar { margin-top:5px; }
-.visual_txt span { width:70%; margin:0 auto; font-size:30px;}
-.visual_txt span.sub_tit { width:100%; font-size:16px; }
-.portfolio h2 { font-size:40px; }
-.portfolio h2 span:before, .portfolio h2 span:after { width:33px; height:40px; background-position-y:10px;}
-.footer_title { width:100%; text-align:center; padding-top:0; }
-.footer_title p { display:inline; }
-.footer_address { width:100%;}
-.footer_address p { font-size:15px; text-align:center;}
-.footer_address p span { display:block; width:100%; }
 
 }
 
