--- a/web/css/main.css
+++ b/web/css/main.css
@@ -10,19 +10,12 @@
 .open_menu ul li { width:100%; line-height:2; }
 .open_menu ul li a { display:block; font-size:20px; color:#fff; text-align:center; }
 
-.menu_close{
-    float:right;
-	width: 22px;
-	height: 22px;
+.menu_close { float:right; width: 22px; height: 22px;
 	-webkit-transform: rotate(360deg);
 	    -ms-transform: rotate(360deg);
 	        transform: rotate(360deg);
 }
-.overlay-menu.active .menu_close{
-	-webkit-transform: rotate(0);
-	    -ms-transform: rotate(0);
-	        transform: rotate(0);
-}
+
 .menu_close:before,
 .menu_close:after{
 	content: "";
