--- a/web/css/media.css
+++ b/web/css/media.css
@@ -36,6 +36,7 @@
 @media all and (min-width:5px) and (max-width:665px) and (orientation : landscape) {
 
 .header { padding:7px 0 7px 30px; }
+.open_menu .logo { margin-top:15%; }
 
 }
 
