--- a/web/css/media.css
+++ b/web/css/media.css
@@ -38,6 +38,7 @@
 @media all and (min-width:5px) and (max-width:665px) and (orientation : landscape) {
 
 .header { padding:7px 0 7px 30px; }
+.header img { width:30px;}
 .open_menu .logo { top:15%; }
 .visual_txt span { width:70%; margin:0 auto; font-size:40px;}
 .visual_txt span.sub_tit { width:100%; font-size:16px; }
