--- a/web/css/media.css
+++ b/web/css/media.css
@@ -40,7 +40,8 @@
 .header { padding:7px 0 7px 30px; }
 .header img { width:30px;}
 .header a.open_menu_bar { margin-top:5px; }
-.open_menu .logo { top:15%; }
+.open_menu .logo { top:20%; }
+.open_menu ul { margin-top:0; }
 .visual_txt span { width:70%; margin:0 auto; font-size:40px;}
 .visual_txt span.sub_tit { width:100%; font-size:16px; }
 .portfolio h2 { font-size:40px; }
