--- a/web/css/main.css
+++ b/web/css/main.css
@@ -10,7 +10,7 @@
 .open_menu ul li { width:100%; line-height:2; }
 .open_menu ul li a { display:block; font-size:20px; color:#fff; text-align:center; }
 
-.menu_close { float:right; width: 22px; height: 22px;
+.menu_close { float:right; width: 22px; height: 22px; font-size:0; text-indent:-9999px;
 	-webkit-transform: rotate(360deg);
 	    -ms-transform: rotate(360deg);
 	        transform: rotate(360deg);
