--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -5,7 +5,9 @@
 html, body { min-width:320px; font-family: 'bradley_hand_Bold','돋움', '굴림', 'Dotum', 'Gulim', 'sans-serif'; -webkit-text-size-adjust:none;}
 a { text-decoration:none; color:#000; }
 
-.view_loading { display:none; position:fixed; left:0; top:0; z-index:200; width:100%; height:100%; text-align:center; padding-top:70px; background: #FFFFF0; filter: alpha(opacity=60); opacity: 0.6; }
+#skipNavi { position:absolute; z-index:10000; width:100%; text-align:center; }
+#skipNavi a { display:block; overflow:hidden; width:1px; height:1px; margin-bottom:-1px; text-align:center; color:#FFF; white-space:nowrap; }
+#skipNavi a:focus,#skipNavi a:active{ width:auto; height:auto; padding:5px; background:#0989cb; }
 
 .header {  width:100%; position:fixed; padding:28px 0 27px 53px; z-index:100; border-bottom:1px solid #a0a1a2; box-sizing:border-box; -webkit-box-sizing:border-box; }
 .header h1 { float:left; }
@@ -17,20 +19,20 @@ a { text-decoration:none; color:#000; }
 .header a.open_menu_bar span.sp03 { bottom:0; width:20px; }
 
 @keyframes bar {
-    from {background-color: #fff;}
-    to {background-color: yellow;}
+    from { background-color: #fff;}
+    to { background-color: yellow;}
 }
 
 .header h1 {
-    -webkit-transition:all 0.7s ease-in-out;
-    -moz-transition:all 0.7s ease-in-out;
-    transition:all 0.7s ease-in-out;
+    -webkit-transition: all 0.7s ease-in-out;
+    -moz-transition: all 0.7s ease-in-out;
+    transition: all 0.7s ease-in-out;
 }
 
 .header h1:hover {
-    -webkit-transform:rotate(360deg);
-    -moz-transform:rotate(360deg);
-    transform:rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    transform: rotate(360deg);
 }
 
 .container { width:100%; background:#f1eded; }
